[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "doppler-sdk"
version = "1.0.0"
license = { text = "SEE LICENSE IN LICENSE" }
authors = [
  { name="Example Author", email="author@example.com" },
]
description = """"""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests==2.31.0",
    "http-exceptions==0.2.10",
    "pytest==7.1.2",
    "responses==0.21.0",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
