[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "doppler-sdk"
version = "1.2.1"
license = { text = "SEE LICENSE IN LICENSE" }
description = """"""
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
	"requests",
	"http-exceptions",
	"pytest",
	"responses"
]

