[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "doppler-sdk"
version = "1.2.1"
license = { text = "MIT" }
description = """"""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
	"License :: OSI Approved :: Apache Software License",
	"Programming Language :: Python :: 3 :: Only",
	"Operating System :: OS Independent",
	"Topic :: Security"
]
dependencies = [
	"requests",
	"http-exceptions",
	"pytest",
	"responses"
]

[project.urls]
Documentation = "https://docs.doppler.com/docs/sdk-python"
Source = "https://github.com/DopplerHQ/python-sdk"
Tracker = "https://github.com/DopplerHQ/python-sdk/issues"
Homepage = "https://doppler.com"